--- a/index.html
+++ b/index.html
@@ -3,8 +3,10 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Leccion 18</title>
+	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
+<div class="container">
 <h1>LECCIÓN 18</h1>
 	<ul>
 		<li><a href="main1.js">Ciclo for</a></li>
@@ -13,5 +15,6 @@
 		<li><a href="main4.js">String de multiplicar</a></li>
 		<li><a href="main5.js">Casi palíndrome</a></li>
 	</ul>
+</div>
 </body>
 </html>
